--- a/Proyecto/ConexionPython.ipynb
+++ b/Proyecto/ConexionPython.ipynb
@@ -69,6 +69,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "Consumer_Key = 'jb2YpS4N4VirQ9AP7QvfuSkwS'\n",
+    "Consumer_Key_Secret = '1Pww9wmuxNrmgzmuUoD7XFG1ZLBEQxlFLodFiaqlzgG4ilfur7'\n",
+    "Access_Token = '1173603361339445249-xsCW5e9Y6vCdvfyz9uRlAUEvdsRJbX'\n",
+    "Access_Token_Secret = 'oZ98Xco7cfc7EIeql4Bq3tSoUGlRhXzZSssRMEebhwtYO'\n",
     "\n",
     "auth = tweepy.OAuthHandler(Consumer_Key, Consumer_Key_Secret)\n",
     "auth.set_access_token(Access_Token, Access_Token_Secret)\n",
@@ -56628,11 +56632,91 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Implementacion de Algoritmos"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Busqueda de Comunidades en base al Candidato y a la Direccion de Donde se realiza\n",
+    "\n",
+    ":param limit => ( 42);\n",
+    ":param config => ({\n",
+    "  nodeProjection: 'Candidato',\n",
+    "  relationshipProjection: {\n",
+    "    relType: {\n",
+    "      type: 'Direccion_del_Tweet',\n",
+    "      orientation: 'UNDIRECTED',\n",
+    "      properties: {}\n",
+    "    }\n",
+    "  },\n",
+    "  relationshipWeightProperty: null\n",
+    "});\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Busqueda de Comunidades en base al Candidato y al Tweet establecido\n",
+    "\n",
+    ":param limit => ( 42);\n",
+    ":param config => ({\n",
+    "  nodeProjection: 'Candidato',\n",
+    "  relationshipProjection: {\n",
+    "    relType: {\n",
+    "      type: 'Tweet_del_Candidato',\n",
+    "      orientation: 'UNDIRECTED',\n",
+    "      properties: {}\n",
+    "    }\n",
+    "  },\n",
+    "  relationshipWeightProperty: null\n",
+    "});"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Busqueda de Similitud entre Mensajes\n",
+    "\n",
+    ":param limit => ( 42);\n",
+    ":param weightProperty => ('messageTweet');\n",
+    ":param config => ({\n",
+    "  nodeProjection: '*',\n",
+    "  relationshipProjection: '*',\n",
+    "  writeProperty: 'score',\n",
+    "  writeRelationshipType: 'SIMILAR_COSINE',\n",
+    "  similarityCutoff: 0.1,\n",
+    "  degreeCutoff: 0\n",
+    "});\n",
+    ":param communityNodeLimit => ( 10);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Busqueda de la Centralidad de Tweets basados en el Candidato y el Tweet del Candidato\n",
+    "\n",
+    ":param limit => ( 42);\n",
+    ":param config => ({\n",
+    "  nodeProjection: 'Candidato',\n",
+    "  relationshipProjection: {\n",
+    "    relType: {\n",
+    "      type: 'Tweet_del_Candidato',\n",
+    "      orientation: 'NATURAL',\n",
+    "      properties: {}\n",
+    "    }\n",
+    "  }\n",
+    "});\n",
+    ":param communityNodeLimit => ( 10);"
+   ]
   }
  ],
  "metadata": {
@@ -56652,6 +56736,13 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.8.5"
+  },
+  "widgets": {
+   "application/vnd.jupyter.widget-state+json": {
+    "state": {},
+    "version_major": 2,
+    "version_minor": 0
+   }
   }
  },
  "nbformat": 4,
